Contact-Us: Fixed some left over comments from Google's examples, then added my own so that it is readable. Moved the styling into the SCSS instead on having it inline on the map-canvas

--- a/src/sass/templates/contact-us.scss
+++ b/src/sass/templates/contact-us.scss
@@ -230,6 +230,11 @@
       left: 0px;
     }
   }
+
+  & #map-canvas {
+    width: 100%;
+    height: 250px;
+  }
 }
 
 
